crates/pv-release/tests/snapshots/manifest_defaults__manifest_generator_rejects_default_track_metadata_for_missing_generated_resource.snap
---
source: crates/pv-release/tests/manifest_defaults.rs
expression: error
---
GeneratedManifestInvalid {
    reason: "manifest default metadata includes resource `mysql` but no release records generated that resource",
}
