crates/pv-release/tests/snapshots/manifest_defaults__manifest_generator_rejects_default_track_metadata_for_missing_generated_track.snap
---
source: crates/pv-release/tests/manifest_defaults.rs
expression: error
---
GeneratedManifestInvalid {
    reason: "resource `php` has explicit default_track `8.5` but generated tracks are (`8.3, 8.4`)",
}
